# LLM_classifier_pipeline

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: llm_eval.yml
dashboard/: app.py
data/: golden_dataset.json  schema.json
eval/: gates.py  runner.py
eval/metrics/: cost.py  faithfulness.py  hallucination.py  latency.py  relevancy.py
pipeline/: config.py  llm_client.py  rag.py
scripts/: merge_and_gate.py  validate_dataset.py
tests/: conftest.py  test_gates.py  test_metrics.py  test_nlp_metrics.py  test_pipeline.py  test_runner.py
