[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-classifier-pipeline"
version = "0.1.0"
description = "LLM RAG evaluation pipeline with automated quality gates"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pipeline", "eval"]

[tool.coverage.run]
source = ["pipeline", "eval"]
omit = ["tests/*", "dashboard/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 50
